--- a/Sources/Title.tex
+++ b/Sources/Title.tex
@@ -10,17 +10,25 @@
       \@subtitle
     \end{Large}\\
     %
+    \vskip 0.25cm
     \emph{by}\\
+    \vskip 0.25cm
     \@author
     %
     \vfill
-    A document submitted in partial fulfillment
-    of the requirements for the degree of\\
+    A Dissertation Submitted \\
+    in \\
+    Partial Fulfillment of the Requirements for the Degree of\\
     \emph{Doctor of Philosophy}\\
     at\\
     \textsc{The University of Hong Kong}
   \end{center}
-  \makeatother
+  %
+  \vfill
+  %
+  \begin{singlespace*}
+    Supervisor:            Dr.\,Bruno C. d. S. Oliveira
+  \end{singlespace*}
 \end{titlepage}
 
 \newpage
