--- a/Thesis.tex
+++ b/Thesis.tex
@@ -118,6 +118,8 @@
 \mainmatter
 
   \include{Sources/Introduction}
+  \include{Sources/Background}
+  \include{Sources/Outro}
 
 % This ensures that the subsequent sections are being included as root
 % items in the bookmark structure of your PDF reader.
